src/app/pages/recursos/recursos.component.scss
.cardList{
  display: flex;
  gap: 1;
  flex-direction: column;
}

.container{
  background-color: rgba(23, 23, 23, 0.454);
  padding-left: 0%
}

.imagen{
 object-fit: cover;
}
.cardRecurso{
  height: calc(100vh*0.485);
  display: flex;
  width: 1320px;
  margin-top: 0.5cm;

}

.imagen{
  min-width: 320px !important;
  height: auto;
  object-fit: cover !important;
}

.contenidoText {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 8; /* Número de líneas que deseas mostrar */
  width: 100%;
  height: 400px;
}


h1{
  padding: 0px 8px 16px 8px;
  font-size: 25px;
  text-align: center;
}

